# start

./: .gitignore  CMakeLists.txt  README.md  eratosphene  main.cpp  sort.typlyp
antlr/: typlyp.g4  typlyp.interp  typlypBaseListener.cpp  typlypBaseListener.h  typlypBaseVisitor.cpp  typlypBaseVisitor.h  typlypLexer.cpp  typlypLexer.h  typlypLexer.interp  typlypLexer.tokens  typlypListener.cpp  typlypListener.h  typlypParser.cpp  typlypParser.h  typlypVisitor.cpp  typlypVisitor.h
antlr4-runtime/libs/: antlr4-runtime.lib
ast/: ASTBuilder.cpp  ASTBuilder.h  ASTNode.h  CodeGeneration.cpp  CodeGeneration.h
ast/nodes/: CodeBlockNode.h  ExpressionNode.h  ExternalFunctionNode.h  FunctionNode.h  IfStatementNode.h  Nodes.h  ParameterNode.h  ProgramNode.h  ReturnStatementNode.h  StatementNode.h
ast/nodes/expressions/: ArrayIndexExpression.h  ArrayIndexExpressionNode.h  BinaryOperationNode.h  BoolLiteralNode.h  ExpressionNode.h  FunctionCallExpression.h  FunctionCallExpressionNode.h  IdentifierNode.h  LiteralNode.h  NewExpression.h  NewExpressionNode.h  NumberLiteralNode.h  UnaryOperationNode.h
ast/nodes/statements/: ArrayAssigmentNode.h  AssigmentStatementNode.h  ExpressionStatementNode.h  ForStatement.h  ForStatementNode.h  IfStatementNode.h  PrintStatementNode.h  ReturnStatementNode.h  StatementNode.h  VariableDecalrationNode.h  WhileStatementNode.h
ast/semantics/: SemanticTable.cpp  SemanticTable.h
bytecode/: bytecode.cpp  bytecode.h
grammar/: typlyp.g4  typlyp.interp  typlyp.tokens  typlypBaseListener.cpp  typlypBaseListener.h  typlypBaseVisitor.cpp  typlypBaseVisitor.h  typlypLexer.cpp  typlypLexer.h  typlypLexer.interp  typlypLexer.tokens  typlypListener.cpp  typlypListener.h  typlypParser.cpp  typlypParser.h  typlypVisitor.cpp  typlypVisitor.h
scratches/: eratosphene.typlyp  factorial.typlyp  func.typlyp  sort.typlyp  test.typlyp  test2.typlyp  test3.typlyp  test4.typlyp
utils/: utils.h
vm/: VirtualMachine.cpp  VirtualMachine.h
